--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,8 @@ steps:
     goals: 'package'
 - task: CopyFiles@2
   inputs:
-    Contents: '**/.war'
+    #Contents: '**/.war'
+    Contents: '/home/vsts/work/1/s/webapp/target/webapp.war'
     TargetFolder: '$(build.artifactstagingdirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
